--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require": {
         "php": ">=5.3.0",
         "illuminate/support": "4.*",
-        "mailgun/mailgun-php": "1.7"
+        "mailgun/mailgun-php": "1.7.*"
     },
     "autoload": {
         "psr-0": {
