--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,8 @@
         "nesbot/carbon": "~1.0"
     },
     "autoload": {
-        "psr-0": {
-            "Bogardo\\Mailgun\\": "src/"
+        "psr-4": {
+            "Bogardo\\Mailgun\\": "src/Bogardo/Mailgun/"
         }
     },
     "minimum-stability": "dev"
